--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fontsource/inconsolata": "^4.5.7",
+    "@fontsource/fira-code": "^4.5.11",
     "@fontsource/inter": "^4.5.11",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
