--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "sharp": "^0.30.7"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4"
+    "tailwindcss": "^3.1.4",
+    "typescript": "4.9.5"
   }
 }
